--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 /node_modules
 /.pnp
 .pnp.js
+node_modules
+dist
+build
+coverage
+.bolt
 
 # Testing
 /coverage
@@ -10,13 +15,15 @@
 /build
 /dist
 
-# Misc
-.DS_Store
+# Environment files
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# Misc
+.DS_Store
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
